# ambot-inlinectl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
src/ambot_inlinectl/: __main__.py
