[project]
name = "ambot_inlinectl"
version = "0.1.0"
description = "Inline management for AmritaBot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "amrita>=1.3.0",
    "click>=8.4.1",
]

[project.urls]
"Homepage" = "https://github.com/AmritaBot/"
"Source" = "https://github.com/AmritaBot/"
"Issue Tracker" = "https://github.com/AmritaBot/"

[tool.uv]
package=true

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    #"pytest>=9.1.1",
    "py-spy>=0.4.1",
    "pyright>=1.1.407",
    #"pytest-asyncio>=1.3.0",
    #"pytest-cov>=7.0.0",

]

[project.scripts]
ambot = "ambot_inlinectl:__main__.main"


[tool.ruff]
line-length = 88
target-version = "py310"
[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
    "I",     # isort
    "PERF",  # pylint-performance
]
ignore = [
    "E501",   # line-too-long
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]
[tool.ruff.lint.per-file-ignores]
"demo/*.py" = ["ASYNC250"]
"tests/*.py" = ["ASYNC250", "PERF401"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.amrita]
plugins = [
    "amrita.plugins.chat",
    "amrita.plugins.manager",
    "amrita.plugins.webui",
]

[tool.nonebot]
plugins = ["nonebot_plugin_orm"]

[tool.amctl.scripts]
orm = "uv run ambot orm"

[tool.amctl.project]
project-type = "amctl_template"
version = "0.1.1"
created_at = "2026-06-21T08:12:45.279885+00:00"
